--- a/BlossomPad/en.lproj/MainStoryboard.storyboard
+++ b/BlossomPad/en.lproj/MainStoryboard.storyboard
@@ -36,7 +36,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="P9q-i2-pCc" firstAttribute="bottom" secondItem="26" secondAttribute="bottom" type="default" id="73G-6q-f9R"/>
+                            <constraint firstItem="P9q-i2-pCc" firstAttribute="bottom" secondItem="26" secondAttribute="bottom" type="user" id="73G-6q-f9R"/>
                             <constraint firstItem="P9q-i2-pCc" firstAttribute="trailing" secondItem="26" secondAttribute="trailing" type="default" id="Cgl-qB-fG4"/>
                             <constraint firstItem="P9q-i2-pCc" firstAttribute="top" secondItem="26" secondAttribute="top" type="default" id="bYv-oz-RHd"/>
                             <constraint firstItem="P9q-i2-pCc" firstAttribute="leading" secondItem="26" secondAttribute="leading" type="default" id="hhf-w5-gIS"/>
@@ -46,6 +46,7 @@
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Detail" id="53"/>
                     <connections>
+                        <outlet property="bottomConstraint" destination="73G-6q-f9R" id="awK-rA-yRo"/>
                         <outlet property="textView" destination="P9q-i2-pCc" id="a9H-aJ-g0M"/>
                     </connections>
                 </viewController>
@@ -127,6 +128,22 @@
             <point key="canvasLocation" x="-366" y="248"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="BPDetailViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BPDetailViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="bottomConstraint" candidateClass="NSLayoutConstraint"/>
+                <relationship kind="outlet" name="detailDescriptionLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="textView" candidateClass="UITextView"/>
+            </relationships>
+        </class>
+        <class className="BPMasterViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BPMasterViewController.h"/>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
         <simulatedOrientationMetrics key="orientation"/>
