BlossomをBlossomPadから分離

--- a/Blossom/BLKeyboardViewController.xib
+++ b/Blossom/BLKeyboardViewController.xib
@@ -32,7 +32,7 @@
 				<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 			</object>
 			<object class="IBUIView" id="191373211">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIImageView" id="565192954">
@@ -50,7 +50,6 @@
 					</object>
 				</array>
 				<string key="NSFrameSize">{1024, 352}</string>
-				<reference key="NSSuperview"/>
 				<reference key="NSNextKeyView" ref="565192954"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -116,7 +115,7 @@
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
-				<string key="-1.CustomClassName">BPKeyboardViewController</string>
+				<string key="-1.CustomClassName">BLKeyboardViewController</string>
 				<string key="-1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
